# myrepo

./: README.md
Internship/GroupProject/: README.md  app.py  exceptions.py  pyproject.toml  repo.py
Internship/GroupProject/Storage/: response_1701269723221.json
Internship/LinuxBasic/: Glossary.txt
Internship/LinuxBasic/Logs/: alias.txt  exercise.txt  helloworld.txt  permision.txt  ps.txt
Internship/LinuxScripting/: bashcrc.sh  counter.sh  counter_v2.sh  dbus.sh  replace.sh
Internship/Python/: ADAS_frame.py  IVI_frame.py  decorator.py  ev.py  linux_commands.py  parser.py
